# communicate_nucleo

./: CMakeLists.txt  README.md  gmon.out
include/: crc16.h  serial_comm_linux.h  serial_comm_ros.h  serial_communicator.h  union_struct.h
launch/: pwm8_serial.launch  telemetry_serial.launch
mbed/: PCA9685.cpp  PCA9685.h  crc16.cpp  crc16.h  drone_motor_pwm.cpp  drone_motor_pwm.h  main.cpp  serial_comm_mbed.cpp  serial_comm_mbed.h  union_struct.h
src/: crc16.cpp  main.cpp  serial_comm_linux.cpp  serial_comm_ros.cpp  serial_communicator.cpp  test_publisher.cpp
